# jamspell-java

./: .editorconfig  .gitattributes  .gitmodules  CHANGELOG.md  LICENSE  README.md  generate.ps1  generate.sh  jamspell-jni.i
cpp/: CMakeLists.txt  build-linux64.sh  build-vs2017.ps1  jamspell-jni.cpp
java/: .gitignore  build.gradle  package.gradle  publish.gradle  settings.gradle
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/com/davipb/jamspell/: JamSpellException.java  JamSpellMemoryManager.java  PlatformUtils.java  SpellCorrector.java  StringVectorUtils.java
java/src/main/java/com/davipb/jamspell/jni/: JamSpell.java  NativeSpellCorrector.java  StringVector.java  jamspell.java  jamspellJNI.java
java/src/main/resources/com/davipb/jamspell/linux/x86/bit64/: jamspell-jni-name
java/src/main/resources/com/davipb/jamspell/windows/x86/bit32/: jamspell-jni-name
